base/monitoring-sv02/cluster-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-dashboard
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: dashsv02.oostrandpark.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-dashboard
                port:
                  number: 80
  tls:
    - hosts:
        - dashsv02.oostrandpark.com
      secretName: cluster-dashboard-tls
